--- a/website/libcal/gleeson-libcal.css
+++ b/website/libcal/gleeson-libcal.css
@@ -1,5 +1,6 @@
 /* GLEESON LIBRARY -- UNIVERSITY OF SAN FRANCISCO */
 /* CUSTOM STYLES USED ON LIBCAL */
+/* Last Edit: 11/22/2025 */
 
 /* GENERAL STYLES */
 
