--- a/website/libguides/gleeson-libguides.css
+++ b/website/libguides/gleeson-libguides.css
@@ -1,6 +1,6 @@
 /* GLEESON LIBRARY -- UNIVERSITY OF SAN FRANCISCO */
 /* CUSTOM STYLES USED ON LIBGUIDES */
-/* TEST MAY 17, 2024 */
+/* Last Edit: 11/22/2025 */
 
 /* HTML & BODY */
 
