--- a/website/global/gleeson-global.css
+++ b/website/global/gleeson-global.css
@@ -1,5 +1,6 @@
 /* GLEESON LIBRARY -- UNIVERSITY OF SAN FRANCISCO */
 /* CUSTOM GLOBAL STYLES USED ON LIBGUIDES, LIBANSWERS, LIBCAL */
+/* Last Edit: 11/22/2025 */
 
 /* TYPOGRAPHY */
 
