--- a/website/libanswers/gleeson-libanswers.css
+++ b/website/libanswers/gleeson-libanswers.css
@@ -1,5 +1,6 @@
 /* GLEESON LIBRARY -- UNIVERSITY OF SAN FRANCISCO */
 /* CUSTOM STYLES USED ON LIBANSWERS */
+/* Last Edit: 11/22/2025 */
 
 /* HEADINGS */
 
