--- a/website/libguides/gleeson-libguides.css
+++ b/website/libguides/gleeson-libguides.css
@@ -410,6 +410,7 @@ big {
     display: flex;
     align-items: end;
     background-color: #000;
+        height: 200px;
 }
 
 #hero-guide .hero-image-container h1#s-lg-guide-name {
@@ -640,9 +641,8 @@ ul.list-group.s-lg-boxnav:before {
     font-family: 'Fira Sans Extra Condensed', sans-serif;
     font-weight: 600;
     text-transform: uppercase;
-    padding: 0 0 7px 35px;
-    /* display: block; */
-    display: none;
+    padding: 6px 0 6px 35px;
+    display: block;
 }
 
 .navbar.guide-nav {
@@ -984,6 +984,23 @@ a .s-lib-profile-name {
 .s-lib-profile-subjects a {
     font-family: 'Fira Sans', serif;
 
+}
+
+.s-lib-profile-widget-other p {
+    font-family: 'Fira Sans Extra Condensed';
+    padding: 10px;
+    margin: 0;
+    text-align: left;
+    line-height: 1.25;
+    border: 2px solid #00543C
+}
+
+.s-lib-profile-widget-other p a {
+    text-decoration: underline;
+}
+
+.s-lib-profile-widget-other p a:hover {
+    text-decoration: none;
 }
 
 /* DEPARTMENTAL PROFILE BOXES */
@@ -1384,6 +1401,11 @@ li.s-lg-tn-li,
 .s-lg-system-list li {
     padding-top: 20px;
     padding-bottom: 20px;
+}
+
+li.s-lg-tn-li,
+.s-lg-link-list-2 li {
+    border-top: none;
 }
 
 .s-lg-book-title,
