updates to code descriptions

--- a/website/global/gleeson-global.css
+++ b/website/global/gleeson-global.css
@@ -1,5 +1,5 @@
 /* GLEESON LIBRARY -- UNIVERSITY OF SAN FRANCISCO */
-/* CUSTOM GLOBAL STYLES USED ON LIBGUIDES, LIBANSWERS, LIBCAL */
+/* CUSTOM GLOBAL STYLES USED ON LIBGUIDES (LEGACY), LIBANSWERS, LIBCAL */
 /* Last Edit: 11/22/2024 */
 
 /* TYPOGRAPHY */
