updates to code descriptions

--- a/website/libguides/gleeson-libguides-bs5.css
+++ b/website/libguides/gleeson-libguides-bs5.css
@@ -1,5 +1,5 @@
 /* GLEESON LIBRARY -- UNIVERSITY OF SAN FRANCISCO */
-/* CUSTOM STYLES USED ON LIBGUIDES -- BOOTSTRAP 5 */
+/* CUSTOM STYLES USED ON LIBGUIDES (NEW) -- BOOTSTRAP 5 */
 /* STYLES FOR A-Z LIST, GENERAL APPEARANCE,HEADER, FOOTER */
 /* Last Edit: 03/28/2025 */
 
