updates to code descriptions

--- a/website/libguides/gleeson-libguides.css
+++ b/website/libguides/gleeson-libguides.css
@@ -1,5 +1,5 @@
 /* GLEESON LIBRARY -- UNIVERSITY OF SAN FRANCISCO */
-/* CUSTOM STYLES USED ON LIBGUIDES */
+/* CUSTOM STYLES USED ON LIBGUIDES (LEGACY) */
 /* Last Edit: 03/28/2025 */
 
 /* HTML & BODY */
