--- a/website/libcal/gleeson-libcal.css
+++ b/website/libcal/gleeson-libcal.css
@@ -1628,8 +1628,8 @@ img.media-object.img-thumbnail.s-lc-c-evt-fi {
 /* STYLING FOR INDIVIDUAL CALENDARS */
 
 @media (min-width: 992px) {
-    #s-lc-page-column-1.col-md-9 {
-        padding-right: 40px;
+    #s-lc-page-column-2.col-md-9 {
+        padding-left: 40px;
     }
 }
 
