--- a/website/libguides/gleeson-libguides-bs5.css
+++ b/website/libguides/gleeson-libguides-bs5.css
@@ -1,7 +1,7 @@
 /* GLEESON LIBRARY -- UNIVERSITY OF SAN FRANCISCO */
 /* CUSTOM STYLES USED ON LIBGUIDES (NEW) -- BOOTSTRAP 5 */
 /* STYLES FOR A-Z LIST, GENERAL APPEARANCE,HEADER, FOOTER */
-/* Last Edit: 05/25/2025 */
+/* Last Edit: 05/14/2025 */
 
 /* HEADER */
 
@@ -995,6 +995,63 @@ div[id^=additional-info] dt {
     font-size: 14px;
     color: #000;
 }
+
+/* ALERTS */
+
+.alert.library-alert {
+    padding: 15px;
+    border-radius: 0;
+    margin-bottom: 0;
+    color: #000;
+}
+
+.alert.library-alert a {
+    color: #000;
+}
+
+.alert.turquoise.library-alert {
+    background-color: #02B8A0;
+}
+
+.alert.olive.library-alert {
+    background-color: #73973F;
+}
+
+.alert.orange.library-alert {
+    background-color: #EB821E;
+}
+
+.alert.red.library-alert {
+    background-color: #CD542C;
+}
+
+.alert.lime.library-alert {
+    background-color: #AED136;
+}
+
+.alert.blue.library-alert {
+    background-color: #00B3D8;
+}
+
+.library-alert .alert-title {
+    font-family: 'Fira Sans Extra Condensed', sans-serif;
+    font-size: 20px;
+    text-transform: uppercase;
+    font-weight: 600;
+    line-height: 1.3;
+}
+
+.library-alert .alert-message {
+    font-size: 14px;
+    font-weight: 500;
+}
+
+@media screen and (min-width: 768px) {
+    .library-alert .alert-message {
+        font-size: 16px;
+    }
+}
+
 
 /* ASK A LIBRARIAN BUTTON */
 
