--- a/website/libguides/gleeson-libguides.css
+++ b/website/libguides/gleeson-libguides.css
@@ -3297,6 +3297,7 @@ span.link-purpose i {
 
 .well.documentation {
     background-color: #fff;
+    margin-bottom: 40px;
 }
 
 .well.information {
