--- a/website/libguides/gleeson-libguides.css
+++ b/website/libguides/gleeson-libguides.css
@@ -3301,6 +3301,10 @@ span.link-purpose i {
     border-left: solid #0785bf 8px;
 }
 
+.well.more-info {
+    border-left: 5px solid #000;
+}
+
 .well-title {
     margin-top: 5px;
     font-family: 'Fira Sans', sans-serif;
