--- a/website/global/gleeson-global.css
+++ b/website/global/gleeson-global.css
@@ -1,6 +1,6 @@
 /* GLEESON LIBRARY -- UNIVERSITY OF SAN FRANCISCO */
 /* CUSTOM GLOBAL STYLES USED ON LIBGUIDES (LEGACY), LIBANSWERS, LIBCAL */
-/* Last Edit: 06/04/2025 */
+/* Last Edit: 06/11/2025 */
 
 /* TYPOGRAPHY */
 
@@ -138,6 +138,7 @@ table p {
 }
 
 @media screen and (min-width: 1024px) {
+
     table,
     table p {
         font-size: 1.125rem;
@@ -233,8 +234,7 @@ blockquote::before {
     top: 0;
     width: 2.25rem;
     height: 2.0625rem;
-    background: #fff url(https://www.usfca.edu/themes/custom/usfca/pattern_lab/source/images/icons-usf/quote.svg)
-        no-repeat center;
+    background: #fff url(https://www.usfca.edu/themes/custom/usfca/pattern_lab/source/images/icons-usf/quote.svg) no-repeat center;
     background-size: cover;
     content: "";
 }
@@ -465,6 +465,7 @@ nav.gleeson.navbar {
 }
 
 @media (max-width: 991px) {
+
     .gleeson .navbar-nav .open .dropdown-menu .dropdown-header,
     .gleeson .navbar-nav .open .dropdown-menu > li > a {
         padding: 0;
@@ -600,179 +601,179 @@ nav.gleeson.navbar {
 
 /* NAVBAR ADJUSTMENTS FOR SUBSITES */
 
-    .navbar.gleeson.sub-site .sub-brand-header {
-        display: flex;
-        align-items: center;
-        text-align: right;
-    }
+.navbar.gleeson.sub-site .sub-brand-header {
+    display: flex;
+    align-items: center;
+    text-align: right;
+}
 
-    .navbar.gleeson.sub-site a.sub-brand {
-        font-family: 'Fira Sans Extra Condensed', sans-serif;
-        font-weight: 500;
-        font-size: 32px;
-        text-decoration: none;
-        line-height: 1;
-    }
+.navbar.gleeson.sub-site a.sub-brand {
+    font-family: 'Fira Sans Extra Condensed', sans-serif;
+    font-weight: 500;
+    font-size: 32px;
+    text-decoration: none;
+    line-height: 1;
+}
 
-    .navbar.gleeson.sub-site a.sub-brand:hover {
-        text-decoration: underline;
-    }
+.navbar.gleeson.sub-site a.sub-brand:hover {
+    text-decoration: underline;
+}
 
-    .navbar.gleeson.sub-site .navbar-nav>li>a {
-        text-transform: none;
-        color: #fff;
-        font-size: 24px;
-        padding: 10px 0;
-    }
+.navbar.gleeson.sub-site .navbar-nav > li > a {
+    text-transform: none;
+    color: #fff;
+    font-size: 24px;
+    padding: 10px 0;
+}
 
-    @media (min-width: 992px) {
-        .navbar.gleeson.sub-site .navbar-nav>li>a {
-            padding: 15px 30px 15px 0;
-        }
+@media (min-width: 992px) {
+    .navbar.gleeson.sub-site .navbar-nav > li > a {
+        padding: 15px 30px 15px 0;
     }
+}
 
-    .navbar.gleeson.sub-site .navbar-nav>li>a:hover {
-        color: #FDBB30;
-        text-decoration: underline;
+.navbar.gleeson.sub-site .navbar-nav > li > a:hover {
+    color: #FDBB30;
+    text-decoration: underline;
+}
+
+.navbar.gleeson.sub-site .navbar {
+    border-radius: 0;
+    margin-bottom: 0;
+}
+
+.navbar.gleeson.sub-site .main-menu-nav {
+    margin-top: 0;
+}
+
+.navbar.gleeson.sub-site a.navbar-sub-brand {
+    color: #fff;
+    font-size: 28px;
+    font-family: "Fira Sans Extra Condensed", sans-serif;
+    line-height: 20px;
+    height: 50px;
+    font-weight: 600;
+    float: left;
+    padding: 15px 0;
+    text-decoration: none;
+}
+
+.navbar.gleeson.sub-site a.navbar-sub-brand:hover {
+    color: #FDB330;
+    text-decoration: underline;
+}
+
+.navbar.gleeson.sub-site .navbar-toggle {
+    margin-top: 6px;
+    margin-bottom: 6px;
+    margin-right: 0;
+}
+
+.navbar.gleeson.sub-site .navbar-right {
+    margin-right: 0;
+}
+
+.navbar.gleeson.sub-site .container > .navbar-header,
+.navbar.gleeson.sub-site .navbar-collapse {
+    margin-right: 0;
+    margin-left: 0;
+    padding-left: 0;
+    padding-right: 0;
+}
+
+@media (max-width: 991px) {
+    .navbar.gleeson.sub-site .navbar-nav {
+        margin: 7.5px 0;
     }
+}
 
-    .navbar.gleeson.sub-site .navbar {
-        border-radius: 0;
-        margin-bottom: 0;
-    }
+.navbar.gleeson.sub-site .s-lg-embedded-search-widget form {
+    height: 50px;
+    display: flex;
+    align-items: center;
+}
 
-    .navbar.gleeson.sub-site .main-menu-nav {
-        margin-top: 0;
-    }
+.navbar.gleeson.sub-site .s-lg-embedded-search-widget .s-lg-form-control {
+    height: 40px !important;
+    border: 1px solid transparent !important;
+    border-radius: 0 !important;
+    max-width: 250px !important;
+}
 
-    .navbar.gleeson.sub-site a.navbar-sub-brand {
-        color: #fff;
-        font-size: 28px;
-        font-family: "Fira Sans Extra Condensed", sans-serif;
-        line-height: 20px;
-        height: 50px;
-        font-weight: 600;
-        float: left;
-        padding: 15px 0;
-        text-decoration: none;
-    }
+.navbar.gleeson.sub-site .s-lg-embedded-search-widget .s-lg-widget-search {
+    max-width: 250px !important;
+}
 
-    .navbar.gleeson.sub-site a.navbar-sub-brand:hover {
-        color: #FDB330;
-        text-decoration: underline;
-    }
+.navbar.gleeson.sub-site .s-lg-embedded-search-widget input.s-lg-form-control {
+    font-family: "Fira Sans Extra Condensed", sans-serif !important;
+    font-size: 18px !important;
+    padding: 0 12px !important;
+}
 
-    .navbar.gleeson.sub-site .navbar-toggle {
-        margin-top: 6px;
-        margin-bottom: 6px;
-        margin-right: 0;
-    }
+.navbar.gleeson.sub-site .s-lg-embedded-search-widget button {
+    height: 40px !important;
+    padding: 0 12px !important;
+    border: 3px solid white !important;
+    font-family: 'Fira Sans', sans-serif !important;
+    font-weight: 600 !important;
+    text-transform: uppercase !important;
+    background: #00543C !important;
+    color: #fff !important;
+    font-size: 14px !important;
+}
 
-    .navbar.gleeson.sub-site .navbar-right {
-        margin-right: 0;
-    }
+.navbar.gleeson.sub-site .s-lg-embedded-search-widget button:hover {
+    border: 3px solid #FFF !important;
+    background: #000 !important;
+    color: #FDB330 !important;
+}
 
-    .navbar.gleeson.sub-site .container>.navbar-header,
-    .navbar.gleeson.sub-site .navbar-collapse {
-        margin-right: 0;
-        margin-left: 0;
-        padding-left: 0;
-        padding-right: 0;
-    }
+.navbar.gleeson.sub-site .dropdown-menu {
+    padding-left: 15px;
+    padding-right: 15px;
+}
 
-    @media (max-width: 991px) {
-        .navbar.gleeson.sub-site .navbar-nav {
-            margin: 7.5px 0;
-        }
-    }
+.navbar.gleeson.sub-site .main-menu-nav .dropdown-menu li a {
+    padding: 7px 0;
+}
 
-    .navbar.gleeson.sub-site .s-lg-embedded-search-widget form {
-        height: 50px;
-        display: flex;
-        align-items: center;
-    }
+.navbar.gleeson.sub-site .main-menu-nav .dropdown-menu li a:hover {
+    background: transparent;
+}
 
-    .navbar.gleeson.sub-site .s-lg-embedded-search-widget .s-lg-form-control {
-        height: 40px !important;
-        border: 1px solid transparent !important;
-        border-radius: 0 !important;
-        max-width: 250px !important;
-    }
-
-    .navbar.gleeson.sub-site .s-lg-embedded-search-widget .s-lg-widget-search {
-        max-width: 250px !important;
-    }
-
-    .navbar.gleeson.sub-site .s-lg-embedded-search-widget input.s-lg-form-control {
-        font-family: "Fira Sans Extra Condensed", sans-serif !important;
-        font-size: 18px !important;
-        padding: 0 12px !important;
-    }
-
-    .navbar.gleeson.sub-site .s-lg-embedded-search-widget button {
-        height: 40px !important;
-        padding: 0 12px !important;
-        border: 3px solid white !important;
-        font-family: 'Fira Sans', sans-serif !important;
-        font-weight: 600 !important;
-        text-transform: uppercase !important;
-        background: #00543C !important;
-        color: #fff !important;
-        font-size: 14px !important;
-    }
-
-    .navbar.gleeson.sub-site .s-lg-embedded-search-widget button:hover {
-        border: 3px solid #FFF !important;
-        background: #000 !important;
-        color: #FDB330 !important;
-    }
-
-    .navbar.gleeson.sub-site .dropdown-menu {
-        padding-left: 15px;
-        padding-right: 15px;
-    }
-
+@media (max-width: 991px) {
     .navbar.gleeson.sub-site .main-menu-nav .dropdown-menu li a {
-        padding: 7px 0;
+        color: #fff;
     }
 
     .navbar.gleeson.sub-site .main-menu-nav .dropdown-menu li a:hover {
+        color: #FDDB30;
         background: transparent;
     }
+}
 
-    @media (max-width: 991px) {
-        .navbar.gleeson.sub-site .main-menu-nav .dropdown-menu li a {
-            color: #fff;
-        }
+.navbar.gleeson.sub-site .navbar-nav .open .dropdown-menu {
+    margin-left: 0;
+    margin-right: 0;
+}
 
-        .navbar.gleeson.sub-site .main-menu-nav .dropdown-menu li a:hover {
-            color: #FDDB30;
-            background: transparent;
-        }
-    }
+.navbar.gleeson.sub-site .main-menu-nav.web-gov {
+    background: #000;
+}
 
-    .navbar.gleeson.sub-site .navbar-nav .open .dropdown-menu {
-        margin-left: 0;
-        margin-right: 0;
-    }
+.navbar.gleeson.sub-site .main-menu-nav.staff-guides {
+    background: #00543C;
+}
 
-    .navbar.gleeson.sub-site .main-menu-nav.web-gov {
-        background: #000;
-    }
+.navbar.gleeson.sub-site .web-gov .s-lg-embedded-search-widget button {
+    background: #000 !important;
+    color: #fff !important;
+}
 
-    .navbar.gleeson.sub-site .main-menu-nav.staff-guides {
-        background: #00543C;
-    }
-
-    .navbar.gleeson.sub-site .web-gov .s-lg-embedded-search-widget button {
-        background: #000 !important;
-        color: #fff !important;
-    }
-
-    .navbar.gleeson.sub-site .web-gov .s-lg-embedded-search-widget button:hover {
-        background: #FDB330 !important;
-        color: #000 !important;
-    }
+.navbar.gleeson.sub-site .web-gov .s-lg-embedded-search-widget button:hover {
+    background: #FDB330 !important;
+    color: #000 !important;
+}
 
 
 
@@ -984,6 +985,7 @@ https://stackoverflow.com/questions/28247310/bootstrap-mobile-menu-icon-change-t
 }
 
 @media screen and (min-width: 768px) {
+
     div .f--wysiwyg p,
     .cc--rich-text .f--wysiwyg p,
     .cc--accordions .accordion-panel p {
@@ -1290,8 +1292,7 @@ https://stackoverflow.com/questions/28247310/bootstrap-mobile-menu-icon-change-t
     display: inline-block;
     width: 0.875rem;
     height: 1.5rem;
-    background: url(https://usfca-site-pattern-lab.herokuapp.com/images/icons-usf/USF_arrow_yellow.svg) no-repeat center
-        center;
+    background: url(https://usfca-site-pattern-lab.herokuapp.com/images/icons-usf/USF_arrow_yellow.svg) no-repeat center center;
     content: "";
 }
 
@@ -1646,6 +1647,10 @@ https://stackoverflow.com/questions/28247310/bootstrap-mobile-menu-icon-change-t
     .library-alert .alert-message {
         font-size: 16px;
     }
+}
+
+.s-lib-box-content .alert.library-alert {
+    padding: 15px;
 }
 
 /* ASK A LIBRARIAN BUTTON */
